# AnswerApi

./: api.py  config.py  pyproject.toml  requirements.txt  settings.toml  stream.py
bot/: __init__.py  bot.py
db/: __init__.py  dados.db  models.py  schemas.py
teste/: stream.py
treino/: colab_question_answering_BERT_base_cased_squad_v11_pt.ipynb  train.py  trainer_seq2seq_qa.py
treino/datasets/: data.py
